force-app/main/default/objects/School__c/fields/Wire_Transfer_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Address_Line_2__c</fullName>
    <label>Wire Transfer Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>