force-app/main/default/objects/School__c/fields/X1_Pay_Discount__c.field-meta.xml
<CustomField>
    <fullName>X1_Pay_Discount__c</fullName>
    <label>1 Pay Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>