force-app/main/default/objects/School__c/fields/Youku__c.field-meta.xml
<CustomField>
    <fullName>Youku__c</fullName>
    <label>Youku URL</label>
    <type>Url</type>
</CustomField>