force-app/main/default/objects/School__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sub_Region__c</columns>
    <columns>NAME</columns>
    <columns>SchoolCode__c</columns>
    <columns>SchoolShortName__c</columns>
    <columns>Region__c</columns>
    <columns>IsNAESchool__c</columns>
    <columns>Address__c</columns>
    <columns>Country__c</columns>
    <columns>BedrockSchool__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>