force-app/main/default/objects/School__c/listViews/NAE_Schools.listView-meta.xml
<ListView>
    <fullName>NAE_Schools</fullName>
    <columns>NAME</columns>
    <columns>SchoolCode__c</columns>
    <columns>SchoolShortName__c</columns>
    <columns>Region__c</columns>
    <columns>Sub_Region__c</columns>
    <columns>IsNAESchool__c</columns>
    <columns>Address__c</columns>
    <columns>Country__c</columns>
    <columns>Bilingual__c</columns>
    <columns>BedrockSchool__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsNAESchool__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BedrockSchool__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>NAE Schools</label>
</ListView>