force-app/main/default/objects/School__c/listViews/TA_Schools.listView-meta.xml
<ListView>
    <fullName>TA_Schools</fullName>
    <columns>NAME</columns>
    <columns>Send_Contracts_By__c</columns>
    <columns>Reference_Date__c</columns>
    <columns>CapacityTotal__c</columns>
    <columns>SchoolCode__c</columns>
    <columns>Legal_Entity_Code__c</columns>
    <columns>DayBoarding__c</columns>
    <columns>AdmissionsQueueCoordinator__c</columns>
    <columns>Deposit_Amount__c</columns>
    <columns>Boarding_Deposit__c</columns>
    <columns>Discount_Threshold__c</columns>
    <columns>Finance_Fee_1_Pay__c</columns>
    <columns>Finance_Fee_Percent_2_Pay__c</columns>
    <columns>Finance_Fee_Percent_10_Pay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>TA</value>
    </filters>
    <filters>
        <field>IsNAESchool__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>TA Schools</label>
    <sharedTo>
        <roleAndSubordinates>The_Americas</roleAndSubordinates>
    </sharedTo>
</ListView>